Fixed horizontal scroll on page

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,6 +1,6 @@
 .header {
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     background-color: transparent;
     background: linear-gradient(to bottom, rgba(28,34,48,1) 0%,rgba(23,30,51,0.36) 100%), url('../images/header-background.jpg') no-repeat center center scroll;
     -webkit-background-size: cover;
